ci: expand the CI pipeline
Switch from Makefile and shell scripts to Taskfile and Dagger,
with a CI validating the following:
* commits should follow conventional commits standard
* no files should be left uncommitted
* correct spelling
* go linters
* go unit tests

Closes: #6

Signed-off-by: Francesco Canovai <francesco.canovai@enterprisedb.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,8 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/go:1-bullseye"
+  "image": "mcr.microsoft.com/devcontainers/go:1-bullseye",
+  "features": {
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+  },
+
+  "postCreateCommand": "curl -L https://dl.dagger.io/dagger/install.sh | BIN_DIR=$HOME/.local/bin sh; sh -c \"$(curl --location https://taskfile.dev/install.sh)\" -- -d -b $HOME/.local/bin",
 }
-  
