test: disable testpackage linter
Signed-off-by: Marco Nenciarini <marco.nenciarini@enterprisedb.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -22,8 +22,9 @@ linters:
     - exhaustruct
     - funlen
     - gomnd
-    - wsl
     - paralleltest
+    - testpackage
+    - wsl
 
 issues:
   exclude-rules:
