--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,8 +22,8 @@ tasks:
       GOLANGCI_LINT_VERSION: v2.3.1
     cmds:
       - >
-        GITHUB_REF= dagger -s call -m github.com/sagikazarmark/daggerverse/golangci-lint@${DAGGER_GOLANGCI_LINT_SHA}
-        run --source . --config .golangci.yml stdout
+        GITHUB_REF= dagger -sc "github.com/sagikazarmark/daggerverse/golangci-lint@${DAGGER_GOLANGCI_LINT_SHA} |
+        run . --config .golangci.yml | stdout"
     sources:
       - ./**/*.go
       - .golangci.yml
